ecsdemo-amp/cdk/cdk.out/ecsworkshopAmpDemo.template.json
{
 "Resources": {
  "VPCB9E5F0B4": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/Resource"
   }
  },
  "VPCPublicSubnet1SubnetB4246D30": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet1/Subnet"
   }
  },
  "VPCPublicSubnet1RouteTableFEE4B781": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet1/RouteTable"
   }
  },
  "VPCPublicSubnet1RouteTableAssociation0B0896DC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet1SubnetB4246D30"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VPCPublicSubnet1DefaultRoute91CEF279": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet1/DefaultRoute"
   }
  },
  "VPCPublicSubnet1EIP6AD938E8": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet1/EIP"
   }
  },
  "VPCPublicSubnet1NATGatewayE0556630": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "VPCPublicSubnet1SubnetB4246D30"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "VPCPublicSubnet1EIP6AD938E8",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VPCPublicSubnet1DefaultRoute91CEF279",
    "VPCPublicSubnet1RouteTableAssociation0B0896DC"
   ],
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet1/NATGateway"
   }
  },
  "VPCPublicSubnet2Subnet74179F39": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet2/Subnet"
   }
  },
  "VPCPublicSubnet2RouteTable6F1A15F1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet2/RouteTable"
   }
  },
  "VPCPublicSubnet2RouteTableAssociation5A808732": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet2Subnet74179F39"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VPCPublicSubnet2DefaultRouteB7481BBA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet2/DefaultRoute"
   }
  },
  "VPCPublicSubnet2EIP4947BC00": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet2/EIP"
   }
  },
  "VPCPublicSubnet2NATGateway3C070193": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "VPCPublicSubnet2Subnet74179F39"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "VPCPublicSubnet2EIP4947BC00",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "VPCPublicSubnet2DefaultRouteB7481BBA",
    "VPCPublicSubnet2RouteTableAssociation5A808732"
   ],
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet2/NATGateway"
   }
  },
  "VPCPublicSubnet3Subnet631C5E25": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "eu-central-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet3/Subnet"
   }
  },
  "VPCPublicSubnet3RouteTable98AE0E14": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet3/RouteTable"
   }
  },
  "VPCPublicSubnet3RouteTableAssociation427FE0C6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet3RouteTable98AE0E14"
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet3Subnet631C5E25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet3/RouteTableAssociation"
   }
  },
  "VPCPublicSubnet3DefaultRouteA0D29D46": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet3RouteTable98AE0E14"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet3/DefaultRoute"
   }
  },
  "VPCPublicSubnet3EIPAD4BC883": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet3/EIP"
   }
  },
  "VPCPublicSubnet3NATGatewayD3048F5C": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "VPCPublicSubnet3Subnet631C5E25"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "VPCPublicSubnet3EIPAD4BC883",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PublicSubnet3"
     }
    ]
   },
   "DependsOn": [
    "VPCPublicSubnet3DefaultRouteA0D29D46",
    "VPCPublicSubnet3RouteTableAssociation427FE0C6"
   ],
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PublicSubnet3/NATGateway"
   }
  },
  "VPCPrivateSubnet1Subnet8BCA10E0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet1/Subnet"
   }
  },
  "VPCPrivateSubnet1RouteTableBE8A6027": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet1/RouteTable"
   }
  },
  "VPCPrivateSubnet1RouteTableAssociation347902D1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
    },
    "SubnetId": {
     "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VPCPrivateSubnet1DefaultRouteAE1D6490": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCPublicSubnet1NATGatewayE0556630"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "VPCPrivateSubnet2SubnetCFCDAA7A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet2/Subnet"
   }
  },
  "VPCPrivateSubnet2RouteTable0A19E10E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet2/RouteTable"
   }
  },
  "VPCPrivateSubnet2RouteTableAssociation0C73D413": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet2RouteTable0A19E10E"
    },
    "SubnetId": {
     "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VPCPrivateSubnet2DefaultRouteF4F5CFD2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet2RouteTable0A19E10E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCPublicSubnet2NATGateway3C070193"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "VPCPrivateSubnet3Subnet3EDCD457": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "AvailabilityZone": "eu-central-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet3/Subnet"
   }
  },
  "VPCPrivateSubnet3RouteTable192186F8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet3/RouteTable"
   }
  },
  "VPCPrivateSubnet3RouteTableAssociationC28D144E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet3RouteTable192186F8"
    },
    "SubnetId": {
     "Ref": "VPCPrivateSubnet3Subnet3EDCD457"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "VPCPrivateSubnet3DefaultRoute27F311AE": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet3RouteTable192186F8"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCPublicSubnet3NATGatewayD3048F5C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/PrivateSubnet3/DefaultRoute"
   }
  },
  "VPCIGWB7E252D3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ecsworkshopAmpDemo/VPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/IGW"
   }
  },
  "VPCVPCGW99B986DC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    },
    "InternetGatewayId": {
     "Ref": "VPCIGWB7E252D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/VPC/VPCGW"
   }
  },
  "DemoCluster8CB095E3": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/DemoCluster/Resource"
   }
  },
  "awsotelFargateTaskTaskRole02AE49CC": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/aws-otel-FargateTask/TaskRole/Resource"
   }
  },
  "awsotelFargateTaskTaskRoleDefaultPolicyB3D475AD": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:PutLogEvents",
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:DescribeLogStreams",
        "logs:DescribeLogGroups",
        "ssm:GetParameters",
        "aps:RemoteWrite"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "awsotelFargateTaskTaskRoleDefaultPolicyB3D475AD",
    "Roles": [
     {
      "Ref": "awsotelFargateTaskTaskRole02AE49CC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/aws-otel-FargateTask/TaskRole/DefaultPolicy/Resource"
   }
  },
  "awsotelFargateTask1957CA94": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "REGION",
        "Value": "eu-central-1"
       },
       {
        "Name": "AOT_CONFIG_CONTENT",
        "Value": "receivers:\n  prometheus:\n    config:\n      global:\n        scrape_interval: 15s\n        scrape_timeout: 10s\n      scrape_configs:\n      - job_name: \"test-prometheus-sample-app\"\n        static_configs:\n        - targets: [ 0.0.0.0:8080 ]\n  awsecscontainermetrics:\n    collection_interval: 15s\nprocessors:\n  filter:\n    metrics:\n      include:\n        match_type: strict\n        metric_names:\n          - ecs.task.memory.utilized\n          - ecs.task.memory.reser [...]
       }
      ],
      "Essential": true,
      "Image": "public.ecr.aws/aws-observability/aws-otel-collector:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AdotLogGroup2D892CD7"
        },
        "awslogs-stream-prefix": "/ecs/ecs-aws-otel-sidecar-collector-cdk",
        "awslogs-region": "eu-central-1"
       }
      },
      "MemoryReservation": 512,
      "Name": "aws-otel-collector"
     },
     {
      "Environment": [
       {
        "Name": "REGION",
        "Value": "eu-central-1"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Sub": "471112870134.dkr.ecr.eu-central-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-471112870134-eu-central-1:a742cf291005039fec889745d5c950d21f5c028c0f6cccec9984b2173afcad75"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AppLogGroup7D8CD952"
        },
        "awslogs-stream-prefix": "/ecs/prometheus-sample-app-cdk",
        "awslogs-region": "eu-central-1"
       }
      },
      "MemoryReservation": 256,
      "Name": "prometheus-sample-app"
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "awsotelFargateTaskExecutionRole8EC6706C",
      "Arn"
     ]
    },
    "Family": "ecsworkshopAmpDemoawsotelFargateTaskEF95CF0A",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "EC2",
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "awsotelFargateTaskTaskRole02AE49CC",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/aws-otel-FargateTask/Resource"
   }
  },
  "awsotelFargateTaskExecutionRole8EC6706C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/aws-otel-FargateTask/ExecutionRole/Resource"
   }
  },
  "awsotelFargateTaskExecutionRoleDefaultPolicy0EFD1D94": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AdotLogGroup2D892CD7",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:eu-central-1:471112870134:repository/cdk-hnb659fds-container-assets-471112870134-eu-central-1"
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AppLogGroup7D8CD952",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "awsotelFargateTaskExecutionRoleDefaultPolicy0EFD1D94",
    "Roles": [
     {
      "Ref": "awsotelFargateTaskExecutionRole8EC6706C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/aws-otel-FargateTask/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "AdotLogGroup2D892CD7": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/AdotLogGroup/Resource"
   }
  },
  "AppLogGroup7D8CD952": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/AppLogGroup/Resource"
   }
  },
  "AmpFargateService72AEF480": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "DemoCluster8CB095E3"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AmpFargateServiceSecurityGroupD529CAC6",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
       },
       {
        "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A"
       },
       {
        "Ref": "VPCPrivateSubnet3Subnet3EDCD457"
       }
      ]
     }
    },
    "ServiceName": "aws-otel-FargateService",
    "TaskDefinition": {
     "Ref": "awsotelFargateTask1957CA94"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/AmpFargateService/Service"
   }
  },
  "AmpFargateServiceSecurityGroupD529CAC6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ecsworkshopAmpDemo/AmpFargateService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/AmpFargateService/SecurityGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12RQW/CMAyFfwv3kAmmTbsy2BDSNFUFcUVpZorXNkaJA6qq/vclLaVoJ788W/GXl7l8eZOzibq6qf4ppiVmstmy0oUI1qEBPZfN/qzF8mj2yVIkPitRb31mgKM3qpQ8w05lJYz+6C2cI42Kkcx9OIqPTRLLt+K1YriqWiQWL0GOF28Mgw16GOhJbqcFB9ZTBYbFFrS3yPXakj93DI9GK0A72SxL78J1sT3InXLFCo5ocKD775BhhQbsg/epbB4pwV5Q9y/uZStQVbJJqc+hqwmFzDrwXrWipDzAfFF+hx105LQH5RywkyvSBdhNpfIYYIgj9GQKZ3LIZOt35cK+FBx5GyC6kfB3OZq8231rtCKp+UTm6VnO5vJ18usQp9Ybxgpk2tc/DKfumwcCAAA="
   },
   "Metadata": {
    "aws:cdk:path": "ecsworkshopAmpDemo/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
